# ScoopMeta

./: .gitignore  LICENSE  README-zh.md  README.md  README_en.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/: release-drafter.yml
.github/workflows/: beta.yml  release.yml  test-update.yml  test.yml
docs/: test-update-channel.md  test-update.json
docs/user-guide/: settings.md
scripts/i18n/: convert-keys-to-camel.js  find-unused-keys.js  generate-dict-types.js  update-usages-to-camel.js
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.test.json
src-tauri/resources/locales/: A_notices.md  en.json  zh.json
src-tauri/src/: cold_start.rs  i18n.rs  lib.rs  main.rs  models.rs  scheduler.rs  state.rs  tray.rs  utils.rs
src-tauri/src/commands/: app_info.rs  auto_cleanup.rs  bucket.rs  bucket_install.rs  bucket_parser.rs  bucket_search.rs  custom_update.rs  debug.rs  hold.rs  info.rs  install.rs  installed.rs  linker.rs  manifest.rs  mod.rs  powershell.rs  regex_utils.rs  scoop.rs  search.rs  settings.rs  startup.rs  status.rs  uninstall.rs  update.rs  update_config.rs  update_log.rs  updates.rs  version.rs  virustotal.rs
src-tauri/src/commands/doctor/: checkup.rs  windows_checks.rs
src/components/: AnimatedButton.tsx  AnimatedUpdateButton.tsx  BucketInfoModal.tsx  ConfirmationModal.tsx  DebugModal.tsx  FloatingOperationModal.tsx  FloatingOperationPanel.tsx  Header.tsx  ManifestModal.tsx  MinimizedIndicator.tsx  MinimizedIndicatorManager.tsx  MultiInstanceWarning.tsx  OperationModal.tsx  PackageInfoModal.tsx  ScoopStatusModal.tsx  VirtualList.tsx
src/hooks/: createStoredSignal.ts  useBucketSearch.ts  useBuckets.ts  useInstalledPackages.ts  usePackageInfo.ts  usePackageOperations.ts  useSearch.ts
src/locales/: en.json  zh.json
src/pages/: BucketPage.tsx  DoctorPage.tsx  (+3 more)
(+45 files in other folders)
