[package]
name = "Pailer"
version = "0.0.1"
description = "A modern, powerful GUI for Scoop - Pailer"
authors = ["Kwensiu"]
license = "MIT"
repository = "https://github.com/Kwensiu/Pailer"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scoopmeta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["tray-icon"] }
tauri-plugin-shell = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.21"
tauri-plugin-log = { version = "2.7" }
winreg = "0.55.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
csv = "1.4"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
] }
regex = "1.12"
rayon = "1.10"
itertools = "0.14"
once_cell = "1.21.3"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
lnk = "0.6.3"
tauri-plugin-opener = "2"
git2 = "0.20"
url = "2.5"
lazy_static = "1.4.0"
tempfile = "3.19"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.10.0"

[target."cfg(windows)".dependencies]
tauri-plugin-updater = "2.7.1"
tauri-plugin-single-instance = "2"
